# espp

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  base_component.html  base_peripheral.html  binary_log_example.html  build_docs.sh  button.html  button_example.html  byte90.html  byte90_example.html  cli.html  cli_example.html  cobs.html  cobs_example.html  color.html  color_example.html  controller.html  controller_example.html  csv.html  csv_example.html  docker_build_docs.sh  esp32_timer_cam.html  esp32_timer_cam_example.html  esp_box.html  esp_box_example.html  event_manager.html  event_manager_example.html  file_system.html  file_system_example.html  genindex.html  getting_started.html  i2c.html  i2c_example.html  idf_component.yml  index.html  interrupt.html  interrupt_example.html  (+68 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
_sources/: base_component.rst.txt  button.rst.txt  byte90_example.md.txt  cobs_example.md.txt  controller.rst.txt  csv.rst.txt  esp32_timer_cam.rst.txt  esp_box.rst.txt  file_system.rst.txt  i2c.rst.txt  index.rst.txt  interrupt.rst.txt  interrupt_example.md.txt  iperf_menu.rst.txt  iperf_menu_example.md.txt  joystick.rst.txt  led.rst.txt  led_strip.rst.txt  logger_example.md.txt  m5stack_tab5.rst.txt  m5stack_tab5_example.md.txt  monitor.rst.txt  monitor_example.md.txt  motorgo_mini.rst.txt  nvs.rst.txt  odrive_ascii_example.md.txt  qtpy_example.md.txt  qwiicnes.rst.txt  rmt.rst.txt  rtsp.rst.txt  runqueue.rst.txt  seeed_studio_round_display.rst.txt  serialization.rst.txt  state_machine.rst.txt  t_deck.rst.txt  t_deck_example.md.txt  t_dongle_s3.rst.txt  t_dongle_s3_example.md.txt  tabulate.rst.txt  task.rst.txt  (+5 more)
_static/: documentation_options.js  hover_api.css  hover_api.js
adc/: adc_example.html  adc_types.html  ads1x15.html  ads1x15_example.html  ads7138.html  ads7138_example.html  continuous_adc.html  index.html  oneshot_adc.html  tla2528.html  tla2528_example.html
battery/: index.html  max1704x.html  max1704x_example.html
bldc/: bdc_driver.html  bdc_driver_example.html  bldc_current_sense.html  bldc_current_sense_example.html  bldc_driver.html  bldc_motor.html  bldc_motor_example.html  bldc_types.html  index.html
ble/: battery_service.html  ble_gatt_server.html  ble_gatt_server_example.html  device_info_service.html  generic_access_service.html  gfps_service.html  gfps_service_example.html  hid_service.html  hid_service_example.html  index.html
buses/: i2c.html  i2c_example.html  index.html  rmt.html  rmt_example.html  spi.html  spi_example.html
components/binary-log/: CMakeLists.txt  README.md  idf_component.yml
components/binary-log/example/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  write_files.py
components/binary-log/example/main/: binary_log_example.cpp
components/binary-log/include/: binary-log.hpp
components/binary-log/src/: binary-log.cpp
components/cli/: CMakeLists.txt  README.md  idf_component.yml
components/cli/example/: CMakeLists.txt  README.md  sdkconfig.defaults.esp32s2
components/cli/example/main/: cli_example.cpp
components/cli/include/: cli.hpp  line_input.hpp
components/cli/src/: cli.cpp
components/display/: CMakeLists.txt  README.md  idf_component.yml
components/display/include/: display.hpp  lv_conf.h
components/esp32-p4-function-ev-board/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/esp32-p4-function-ev-board/example/: CMakeLists.txt  README.md  sdkconfig.defaults
components/esp32-p4-function-ev-board/example/main/: esp32_p4_function_ev_board_example.cpp
components/esp32-p4-function-ev-board/include/: esp32-p4-function-ev-board.hpp
components/esp32-p4-function-ev-board/src/: audio.cpp  esp32-p4-function-ev-board.cpp  ethernet.cpp  sdcard.cpp  touchpad.cpp  video.cpp
components/file_system/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
components/file_system/example/: CMakeLists.txt  README.md  sdkconfig.defaults
components/file_system/example/main/: CMakeLists.txt  file_system_example.cpp
components/file_system/include/: file_system.hpp
components/file_system/src/: file_system.cpp
components/gfps_service/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml
components/gfps_service/example/: CMakeLists.txt  README.md
components/gfps_service/example/main/: gfps_service_example.cpp
components/gfps_service/include/: gfps.hpp  gfps_characteristic_callbacks.hpp  gfps_service.hpp  nearby_types.h
components/gfps_service/src/: gfps_service.cpp  nearby_audio.cpp  nearby_battery.cpp  nearby_ble.cpp  nearby_persistence.cpp  nearby_platform.cpp  nearby_se.cpp  nearby_trace.cpp
components/t-deck/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/t-deck/example/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/t-deck/example/main/: mouse_cursor_icon.c  t_deck_example.cpp
components/t-deck/include/: t-deck.hpp
components/t-deck/src/: audio.cpp  buttons.cpp  sdcard.cpp  t-deck.cpp
core/: base_component.html  base_peripheral.html  binary_log_example.html  cli.html  cli_example.html  event_manager.html  event_manager_example.html  index.html  interrupt.html  interrupt_example.html  logger.html  logger_example.html  monitor.html  monitor_example.html  runqueue.html  runqueue_example.html  state_machine.html  task.html  (+4 more)
lib/: CMakeLists.txt  README.md  autogenerate_bindings.py  bind.cpp  build.ps1  build.sh  build_cloud.ps1  espp.cmake  espp.cpp  espp.hpp  fix_generated_bindings.py  lib.cpp  pyproject.toml  requirements.txt  wcswidth.c
lib/include/: espp.hpp  wcswidth.h
lib/python_bindings/: cdr_bindings.cpp  module.cpp  pybind_espp.cpp  rtps_bindings.cpp  span_caster.h
lib/python_bindings/espp/: __init__.pyi
lib/python_bindings/espp_lib/: __init__.py  __init__.pyi
pc/: CMakeLists.txt  README.md  build.ps1  build.sh
pc/tests/: cli.cpp  file_system.cpp  rtps_common.hpp  rtps_publisher.cpp  rtps_pubsub.cpp  rtps_subscriber.cpp  task.cpp  timer.cpp  udp_client.cpp  udp_server.cpp
(+1944 files in other folders)
