idf_component_register(
  INCLUDE_DIRS "include"
  SRC_DIRS "src"
  REQUIRES
    "base_component"
    "codec"
    "display"
    "display_drivers"
    "gt911"
    "i2c"
    "input_drivers"
    "interrupt"
    "led"
    "task"
    "esp_driver_gpio"
    "esp_lcd"
    "esp_driver_i2s"
    "esp_eth"
    "esp_netif"
    "esp_event"
    "fatfs"
    "esp_driver_sdmmc"
    "sdmmc"
  )
